--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <title>成功國小課表</title>
     <style>
         body,
@@ -17,20 +18,29 @@
             display: flex;
             justify-content: space-around;
         }
+
+        .table{
+            margin: 10px;
+        }
+
+        footer{
+            background-color: #e9f174;
+            text-align: center;
+            padding: 10px;
+        }
     </style>
 </head>
 
 <body>
     <div class="content">
         <div>
-            <h1>原稿</h1>
-            <img src="pic/bb.png" width="400px">
+            <h3>原稿</h3>
+            <img src="pic/bb.png" width="550px">
             <br>
         </div>
         <div>
-            <h1>Table手刻版</h1>
-            <table border="1" width="700">
-                <caption>宜蘭縣成功國民小學九十八學年度日課表</caption>
+            <h3>Table手刻版</h3>
+            <table border="1" width="700" class="table">
                 <thead>
                     <tr>
                         <th colspan="13">宜蘭縣成功國民小學九十八學年度日課表</th>
@@ -38,7 +48,7 @@
                 </thead>
                 <tbody align="center">
                     <tr>
-                        <td>時段</td>
+                        <td>時<br>段</td>
                         <td colspan="3">時間/科別/星期</td>
                         <td>一</td>
                         <td>二</td>
@@ -80,7 +90,7 @@
                     <tr>
                         <td>英語</td>
                         <td>40</td>
-                        <td>許淑朽</td>
+                        <td>許淑玬</td>
                     </tr>
                     <tr>
                     </tr>
@@ -175,7 +185,7 @@
                         <td>潘文欽</td>
                     </tr>
                     <tr>
-                        <td rowspan="13">下午</td>
+                        <td rowspan="13">下<br><br><br>午</td>
                         <td rowspan="4"></td>
                         <td rowspan="4">80</td>
                         <td rowspan="2">12:00<br>12:40</td>
@@ -226,7 +236,7 @@
                     <tr>
                         <td>英語</td>
                         <td>40</td>
-                        <td>許淑朽</td>
+                        <td>許淑玬</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -263,6 +273,12 @@
             </table>
         </div>
     </div>
+    <footer class="py-2 text-center bg-dark">
+        <section>
+            Copyright &copy; 2020 Tim Chen All rights reserved.
+            <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github"></i></a>
+        </section>
+    </footer>
 </body>
 
 </html>
