--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </table>
         </div>
     </div>
-    <footer class="py-2 text-center bg-dark">
+    <footer>
         <section>
             Copyright &copy; 2020 Tim Chen All rights reserved.
             <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github"></i></a>
