--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <table width="650" height="750" class="table">
                 <thead>
                     <tr>
-                        <th colspan="13">宜蘭縣成功國民小學九十八學年度日課表</th>
+                        <th colspan="13" class="title">宜蘭縣成功國民小學九十八學年度日課表</th>
                     </tr>
                 </thead>
                 <tbody align="center">
