--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="column">
             <h3>Table手刻版</h3>
-            <table width="650" height="750" class="table">
+            <table class="table">
                 <thead>
                     <tr>
                         <th colspan="13" class="title">宜蘭縣成功國民小學九十八學年度日課表</th>
@@ -228,13 +228,11 @@
                 </tbody>
             </table>
         </div>
-
-        <footer>
-            Copyright &copy; 2020 Tim Chen All rights reserved.
-            <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github"></i></a>
-        </footer>
     </div>
-   
+    <div class="footer">
+        Copyright &copy; 2020 Tim Chen All rights reserved.
+        <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
 </body>
 
 </html>
