--- a/Anilove/index.html
+++ b/Anilove/index.html
@@ -126,6 +126,10 @@
             border-bottom: 3px solid #ffffff;
         }
 
+        .header .main nav li a{
+            color: #535353;
+        }
+
         .header .main nav li:hover {
             border-color: #ff9933;
         }
