--- a/Anilove/index.html
+++ b/Anilove/index.html
@@ -6,721 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            transition: all 0.3s;
-            font-family: 'Lato', sans-serif;
-            text-decoration: none;
-        }
-
-        .navFixed {
-            z-index: 99;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 90px;
-        }
-
-        .header .top {
-            background-color: #272626;
-            height: 60px;
-        }
-
-        .header .top .row {
-            font-size: 20px;
-            font-weight: 400;
-            color: #ffffff;
-            width: 1200px;
-            height: 100%;
-            margin: auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-        }
-
-        .header .top .row .left i {
-            color: #ff9933;
-        }
-
-        .header .top .left span:hover {
-            color: #ff9933;
-        }
-
-        .header .top nav {
-            display: flex;
-        }
-
-        .header .top nav a {
-            font-size: 12px;
-            width: 20px;
-            height: 20px;
-            border-radius: 50px;
-            color: #272626;
-            background-color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all .4s ease;
-            overflow: hidden;
-            margin: 0 3px;
-        }
-
-        .header .top nav a:hover {
-            background-color: #ff9933;
-        }
-
-        .header .top nav i {
-            color: #272626;
-        }
-
-
-        .header .main {
-            font-size: 18px;
-            background-color: #fff;
-            padding: 10px 0;
-            width: 100%;
-
-        }
-
-        .header .main .main-content {
-            width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            vertical-align: top;
-        }
-
-        .header .main .logo {
-            display: flex;
-            padding: 15px;
-        }
-
-        .header .main .logo .title {
-            font-family: 'PT Serif', serif;
-            color: #535353;
-            font-size: 50px;
-            padding: 5px 15px;
-            font-weight: 700;
-        }
-
-        .header .main nav {
-            font-weight: 100;
-            display: flex;
-            width: 700px;
-            justify-content: space-evenly;
-        }
-
-        .header .main nav li {
-            font-weight: 300;
-            padding: 15px 0;
-            line-height: 26px;
-            letter-spacing: 1px;
-            box-sizing: border-box;
-            transition-duration: .1s;
-            border-bottom: 3px solid #ffffff;
-        }
-
-        .header .main nav li a{
-            color: #535353;
-        }
-
-        .header .main nav li:hover {
-            border-color: #ff9933;
-        }
-
-        .btn-group button {
-            border-radius: 2px;
-            border: 2px solid #ff9933;
-            font-size: 12px;
-            padding: 15px 35px;
-            color: #ff9933;
-            background-color: #fff;
-            font-weight: 700;
-
-        }
-
-        .btn-group button:hover {
-            border-color: #7abee9;
-            background-color: #7abee9;
-            color: #fff;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            font-family: 'Lato', sans-serif;
-        }
-
-        .banner {
-            position: relative;
-            height: 650px;
-            background-image: url('img/asset_7.jpeg');
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .banner .text {
-            position: absolute;
-            bottom: 42%;
-            left: 19%;
-            font-weight: 700;
-        }
-
-        .banner .text p {
-            font-size: 50px;
-            color: #535353;
-        }
-
-        .banner .text h1 {
-            color: #7abee9;
-            font-size: 80px;
-        }
-
-        .banner .text h4 {
-            font-size: 24px;
-            color: #535353;
-        }
-
-        .banner .banner-btn {
-            position: absolute;
-            bottom: 25%;
-            left: 19%;
-
-        }
-
-        .btn-group2 button {
-            border-radius: 2px;
-            border: 1px solid #ff9933;
-            font-size: 14px;
-            color: #fff;
-            background-color: #ff9933;
-            line-height: 24px;
-            padding: 20px 60px;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
-
-        .btn-group2 button:hover {
-            border-color: #000;
-            background-color: #000;
-        }
-
-        .about {
-            width: 1200px;
-            margin: auto;
-            margin-top: 50px;
-            display: flex;
-        }
-
-        .about .item {
-            width: 50%;
-        }
-
-        .about .item img {
-            width: 100%;
-            vertical-align: bottom;
-        }
-
-        .about .text {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 0 20px;
-        }
-
-        .about .text h1 {
-            font-size: 50px;
-            line-height: 1.2;
-            padding-bottom: 15px;
-        }
-
-        .about .text h4 {
-            font-size: 30px;
-            color: #7abee9;
-            padding-bottom: 10px;
-            line-height: 1.5;
-        }
-
-        .about .text p {
-            font-size: 14px;
-            font-weight: 400;
-            color: #8d8d8d;
-            padding-bottom: 20px;
-            line-height: 1.5;
-        }
-
-        .help {
-            text-align: center;
-            background-color: #f9f9f9;
-            margin-bottom: 80px;
-            padding: 40px;
-        }
-
-        .help .main-content {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .help .main-content h1 {
-            font-weight: 700;
-            color: #535353;
-            font-size: 50px;
-            line-height: 1.2;
-        }
-
-        .help .main-content h4 {
-            font-weight: 700;
-            color: #7abee9;
-            font-size: 30px;
-            line-height: 1.5;
-        }
-
-        .help .main-content .pic {
-            display: flex;
-        }
-
-        .help .main-content .pic .item {
-            width: 370px;
-            height: 450px;
-            margin: 15px;
-            position: relative;
-        }
-
-        .help .main-content .pic .item img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .help .main-content .pic p {
-            position: absolute;
-            top: 85%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #ffffff;
-            font-weight: 700;
-            font-size: 34px;
-            line-height: 1.5;
-            width: 100%;
-            z-index: 99;
-        }
-
-        .help .main-content .pic p:hover {
-            color: #ff9933;
-            filter: brightness(1);
-        }
-
-        .help p:hover~img {
-            filter: brightness(.5);
-        }
-
-        .help .main-content .pic img:hover {
-            filter: brightness(.5);
-        }
-
-        .volunteer .main-content {
-            width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .volunteer .main-content .item {
-            width: 50%;
-            margin: 0 15px 50px 15px;
-        }
-
-        .volunteer .main-content .item img {
-            width: 100%;
-        }
-
-        .volunteer .main-content .left {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .volunteer .main-content .left .text {
-            text-align: right;
-            font-weight: 700;
-            color: #535353;
-            font-size: 50px;
-            line-height: 1.2;
-            margin-bottom: 30px;
-        }
-
-        .volunteer .main-content .right {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-        }
-
-        .volunteer .main-content p {
-            color: #535353;
-            font-size: 14px;
-            line-height: 1.5;
-        }
-
-        .upcoming {
-            width: 1200px;
-            margin: auto;
-            height: 390px;
-            background-image: url('img/asset_11.jpeg');
-            background-position: center;
-            background-repeat: no-repeat;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            text-align: center;
-            margin-bottom: 80px;
-        }
-
-        .upcoming .text {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100px;
-            font-weight: 700;
-        }
-
-        .upcoming .text h4 {
-            color: #535353;
-            font-size: 50px;
-            line-height: 1.2;
-        }
-
-        .upcoming .text h1 {
-            color: #7abee9;
-            font-size: 60px;
-            line-height: 1.5;
-        }
-
-        .upcoming .text p {
-            color: #535353;
-            font-size: 24px;
-            line-height: 1.2;
-        }
-
-        .btn-group3 button {
-            border-radius: 2px;
-            border: 1px solid #ff9933;
-            font-size: 14px;
-            padding: 15px 30px;
-            color: #fff;
-            background-color: #ff9933;
-            line-height: 24px;
-            padding: 20px 55px;
-            font-weight: 700;
-        }
-
-        .btn-group3 button:hover {
-            border-color: #7abee9;
-            background-color: #7abee9;
-        }
-
-        .parallax {
-            background-image: url('img/asset_13.jpeg');
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            height: 700px;
-            border-bottom: solid 20px #ff9933;
-            margin-bottom: 80px;
-            ;
-        }
-
-        .latest {
-            width: 1200px;
-            height: 950px;
-            margin: auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            text-align: center;
-            font-weight: 700;
-        }
-
-
-
-        .latest .text h2 {
-            color: #535353;
-            font-size: 50px;
-            line-height: 1.5;
-        }
-
-        .latest .text p {
-            color: #7abee9;
-            font-size: 30px;
-            line-height: 1.5;
-        }
-
-        .more {
-            width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-around;
-            margin-bottom: 80px;
-        }
-
-        .more .item {
-            height: 400px;
-            width: 50%;
-            margin: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .more .item .more-item {
-            padding: 5px 20px;
-            color: #fff;
-        }
-
-        .more .item .more-item img {
-            width: 100%;
-            border-radius: 50%;
-        }
-
-        .more .item .more-item p {
-            font-weight: 600;
-        }
-
-        .more .item .more-item span:hover {
-            color: #ff9933;
-        }
-
-        .more .item .more-item h2 {
-            line-height: 1.5;
-            font-size: 30px;
-        }
-
-
-
-        .more .item .more-item h2:hover {
-            color: #ff9933;
-        }
-
-        .more .pic1 {
-            background-image: url('img/asset_14.jpeg');
-            background-repeat: no-repeat;
-        }
-
-        .more .pic2 {
-            background-image: url('img/asset_15.jpeg');
-            background-repeat: no-repeat;
-        }
-
-        .record {
-            background-image: url('img/asset_16.jpeg');
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            height: 525px;
-            margin-bottom: 80px;
-            position: relative;
-        }
-
-        .record .main-content {
-            position: absolute;
-            width: 1200px;
-            margin: auto;
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .record .main-content .item {
-            width: 270px;
-            text-align: center;
-            font-weight: 700;
-        }
-
-        .record .main-content .num {
-            color: #ffffff;
-            font-size: 60px;
-            line-height: 1.5;
-        }
-
-        .record .main-content .text {
-            color: #ffffff;
-            font-size: 24px;
-            line-height: 1.5;
-        }
-
-        .ig-title {
-            text-align: center;
-            font-weight: 700;
-            color: #535353;
-            font-size: 50px;
-            line-height: 1.2;
-            margin-bottom: 80px;
-        }
-
-        .ig-pic {
-            display: flex;
-        }
-
-        .ig-pic .item {
-            height: 360px;
-            width: 25%;
-            position: relative;
-        }
-
-
-        .ig-pic .item img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .ig-pic .mask {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 360px;
-            width: 100%;
-            background-color: #ff9933;
-            opacity: 0;
-            transition: all 0.4s ease-in-out;
-        }
-
-        .ig-pic .mask:hover {
-            opacity: .6;
-            transition: all 0.4s ease-in-out;
-        }
-
-        .footer {
-            background-color: #272626;
-            color: #fff;
-            height: 470px;
-            font-weight: 600;
-        }
-
-        .footer .main-content {
-            width: 1200px;
-            height: 100%;
-            margin: auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            text-align: center;
-        }
-
-        .footer .social i {
-            color: #ffffff;
-            font-size: 22px;
-        }
-
-        .footer .text i {
-            color: #ff9933;
-        }
-
-
-        .footer .logo {
-            display: flex;
-            justify-content: center;
-        }
-
-        .footer .social {
-            display: flex;
-            justify-content: center;
-        }
-
-        .footer .social .icon {
-            height: 56px;
-            width: 56px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin: 5px;
-        }
-
-        .footer .social .twitter {
-            background-color: #00aeef;
-        }
-
-        .footer .social .facebook {
-            background-color: #547cd5;
-        }
-
-        .footer .social .pinterest {
-            background-color: #cc3300;
-        }
-
-        .footer .social .linkedin {
-            background-color: #0075b6;
-        }
-
-        .footer .logo .title {
-            color: #fff;
-            font-size: 50px;
-            padding: 5px 15px;
-            font-weight: 700;
-            font-family: 'PT Serif', serif;
-        }
-
-        .footer .main-content .text p {
-            margin: 20px 0;
-        }
-
-        .footer .main-content span:hover {
-            color: #ff9933;
-        }
-
-        .phone-call {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            box-shadow: 0 4px 10px 0 #999595;
-            width: 80px;
-            height: 80px;
-            background-color: #fff;
-            border-radius: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .phone-call i {
-            font-size: 50px;
-            line-height: 80px;
-            color: #ff9933;
-        }
-
-        .top-btn {
-            display: none;
-            position: fixed;
-            bottom: -100px;
-            right: 20px;
-            width: 60px;
-            height: 60px;
-            background-color: #ff9933;
-            border-radius: 2px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            opacity: .2;
-        }
-
-        .top-btn i {
-            font-size: 18px;
-            line-height: 80px;
-            color: #ffffff;
-        }
-    </style>
 </head>
 
 <body>
@@ -762,7 +49,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="container">
         <div class="banner">
@@ -862,9 +148,7 @@
                         type="video/mp4">
                 </video>
             </div>
-
         </div>
-
 
         <div class="more">
             <div class="item pic1">
@@ -982,7 +266,6 @@
             });
         });
     </script>
-
 </body>
 
 </html>
