--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build School作業列表</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet">
+
     <style>
         * {
             font-family: "微軟正黑體", Arial, Helvetica, sans-serif;
@@ -43,6 +45,11 @@
                 <a href="Anilove/index.html" class="text-primary h4">2020/06/29 Anilove網站切版</a>
             </li>
         </ul>
+    </div>
+
+    <div class="text-center py-2 text-secondary">
+        Copyright &copy; 2020 Tim Chen All rights reserved.
+        <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github text-secondary"></i></a>
     </div>
 </body>
 
