--- a/Anilove/index.html
+++ b/Anilove/index.html
@@ -106,12 +106,12 @@
         <div class="volunteer">
             <div class="main-content">
                 <div class="item left">
-                    <div class="text">Volunteer to Save
+                    <div class="text">Volunteer to Save<br>
                         Animals Now!</div>
-                    <div class="pic"><img src="/img/img4.jpg" alt=""></div>
+                    <div class="pic"><img src="img/img4.jpg" alt=""></div>
                 </div>
                 <div class="item right">
-                    <div class="pic"><img src="/img/img5.jpg" alt=""></div>
+                    <div class="pic"><img src="img/img5.jpg" alt=""></div>
                     <p>With so many pets less fortunate than your cat and dog, there’s always something you can do about
                         it!</p>
                     <div class="about-btn btn-group2">
