--- a/Anilove/index.html
+++ b/Anilove/index.html
@@ -197,19 +197,27 @@
         <div class="ig-pic">
             <div class="item">
                 <img src="img/asset_3.jpeg" alt="">
-                <div class="mask"></div>
+                <div class="mask">
+                    <i class="fa fa-instagram"></i>
+                </div>
             </div>
             <div class="item">
                 <img src="img/asset_4.jpeg" alt="">
-                <div class="mask"></div>
+                <div class="mask">
+                    <i class="fa fa-instagram"></i>
+                </div>
             </div>
             <div class="item">
                 <img src="img/asset_5.jpeg" alt="">
-                <div class="mask"></div>
+                <div class="mask">
+                    <i class="fa fa-instagram"></i>
+                </div>
             </div>
             <div class="item">
                 <img src="img/asset_6.jpeg" alt="">
-                <div class="mask"></div>
+                <div class="mask">
+                    <i class="fa fa-instagram"></i>
+                </div>
             </div>
         </div>
 
