--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="curriculum/index.html" target="_blank" class="text-primary h4">2020/06/24 國小課表Table手刻</a>
             </li>
             <li class="list-group-item">
-                <a href="Anilove/index.html" target="_blank" class="text-primary h4">2020/06/29 Anilove網站切版</a>
+                <a href="Anilove/index.html" target="_blank" class="text-primary h4">2020/06/29 Anilove網站切版(無RWD)</a>
             </li>
         </ul>
     </div>
